Fix: information div alignment

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ h1 {
     text-align: center;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 8px;
 }
 
